--- a/style.css
+++ b/style.css
@@ -279,9 +279,8 @@ body {
 }
 
 .img {
-  width: 100%;
-  height: 50%;
-  align-items: center;
+  max-width: 100%;
+  height: auto;
   margin: 0;
 }
 
@@ -671,9 +670,8 @@ div .tabletimg {
 
 .popup1 {
   display: none;
-  width: 100%;
+  max-width: 95%;
   height: auto;
-  padding: 20%;
   background-color: #ffff;
   position: fixed;
   top: 0;
@@ -686,7 +684,6 @@ div .tabletimg {
 
 .popup1.active {
   display: block;
-  margin: auto;
   justify-content: center;
   backdrop-filter: blur(3px);
 }
